...
                  inputRange: [0, 1],
                  outputRange: ['#fff', '#FFF82B'],
                }),
              },
            ]}>
            <PokeInput
              testID="PasswordInputID"
              placeholder="Password"
              isPassword
              value={password}
              onChangeText={(text: string) => setPassword(text)}
              style={styles.password}
              onFocus={() => {
...
              onBlur={() => {
                deactiveInputAnimation();
              }}
            />
          </Animated.View>
          <Button
            testID="LoginBtnID"
            title="Login"
            onPress={() => {
              logInUser();
            }}
          />
        </View>
...
