...
      <Animated.View style={pokedexStyle}>
        <PokedexAnimation />
      </Animated.View>
      <Animated.View style={[styles.container, contentStyle]}>
        <View style={styles.duoWrapper}>
          <Photo id={id} />
          <Name name={pokemon?.name} testID="PokemonNameID" />
        </View>
        <View style={styles.duoWrapper}>
          <Info name="Height" value={pokemon?.height} />
          <Info name="Weight" value={pokemon?.weight} />
          <Info name="Experience" value={pokemon?.baseExperience} />
        </View>
...
