...
      <Animated.View style={contentStyle}>
        <View style={styles.statusBarWrapper}>
          <Animated.View style={[styles.statusBar, animatedWidthStyle]} />
        </View>
        <View style={styles.listWrapper}>
          <FlatList
            testID="PokeListID"
            onScroll={(event) => {
              setStatus(event.nativeEvent.contentOffset.y);
            }}
            onContentSizeChange={(width, height) => {
              setScrollViewContentHeight(height);
            }}
...
